# -vibeconding-

./: .env.example  .gitignore  AGENT.md  Cargo.toml  DECISIONS.md  PROGRESS.md  README.md  RISKS.md  TASKS.json  TODO_NOW.md  eslint.config.mjs  offline_desktop_bi_architecture.md  package.json  pnpm-lock.yaml  test_dataset.csv
.github/workflows/: README.md  frontend-build.yml  frontend-e2e.yml  rust-validation.yml
apps/desktop/: components.json  index.html  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
apps/desktop/src/: globals.css  main.tsx  package-shims.d.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: command_support.rs  error.rs  lib.rs
apps/desktop/src-tauri/src/app_state/: README.md  mod.rs
apps/desktop/src-tauri/src/bootstrap/: README.md  mod.rs
apps/desktop/src-tauri/src/commands/: README.md  mod.rs
apps/desktop/src-tauri/src/security/: README.md  mod.rs
apps/desktop/src-tauri/src/services/: README.md  mod.rs
apps/desktop/src/app/: App.tsx  AppProviders.tsx  README.md  bootstrap.tsx
apps/desktop/src/entities/: README.md
apps/desktop/src/entities/chart/: types.ts
apps/desktop/src/entities/dashboard/: layout.ts  types.ts
apps/desktop/src/entities/dataset/: projectMetadata.ts  types.ts
apps/desktop/src/entities/field/: queryBuilder.ts  types.ts
apps/desktop/src/entities/project/: types.ts
apps/desktop/src/features/: README.md
apps/desktop/src/features/chart-builder/: README.md  model.ts
apps/desktop/src/features/dashboard-editor/: README.md
apps/desktop/src/features/dataset-import/: README.md
apps/desktop/src/features/field-pane/: README.md
apps/desktop/src/features/filter-bar/: README.md
apps/desktop/src/pages/: README.md  WorkbenchPage.tsx
apps/desktop/src/shared/: README.md
apps/desktop/src/shared/api/: README.md  tauriBridge.ts  workbenchActions.ts  workbenchApi.ts  workbenchQueries.ts
apps/desktop/src/shared/charts/: QueryResultChart.tsx  README.md
apps/desktop/src/shared/dnd/: DraggableFieldChip.tsx  FieldDropZone.tsx  README.md  fieldDrag.ts
apps/desktop/src/shared/lib/: README.md  appLanguage.ts  appUiStore.ts  cn.ts  frontendLogger.ts  i18n.ts  uiError.ts  useWorkbenchEffects.ts  useWorkbenchModels.ts  useWorkbenchRuntime.ts  useWorkbenchState.ts  workbenchInteractions.ts  workbenchStatus.ts  workbenchUiError.ts  workbenchViewProps.ts
apps/desktop/src/shared/ui/: AppLayout.tsx  Badge.tsx  Button.tsx  Card.tsx  ErrorBanner.tsx  Input.tsx  QueryResultTable.tsx  README.md  Select.tsx
apps/desktop/src/widgets/: README.md
apps/desktop/src/widgets/body/: WorkbenchBodyWidget.tsx
crates/analytics-core/: Cargo.toml  build.rs
crates/analytics-core/src/: duckdb_sql.rs  lib.rs
crates/analytics-core/src/chart_specs/: mod.rs
crates/analytics-core/src/dataset_io/: mod.rs
crates/analytics-core/src/executor/: mod.rs
crates/analytics-core/src/planner/: mod.rs
crates/analytics-core/src/profiling/: mod.rs
crates/analytics-core/src/semantic/: mod.rs
crates/analytics-core/src/suggestions/: mod.rs
crates/connectors/: Cargo.toml  README.md
crates/connectors/src/: README.md  lib.rs
crates/export-runtime/: Cargo.toml  README.md
crates/export-runtime/src/: README.md  lib.rs
crates/job-runner/: Cargo.toml  README.md
crates/job-runner/src/: README.md  lib.rs
crates/metadata-store/: Cargo.toml
crates/metadata-store/src/: lib.rs
crates/telemetry/: Cargo.toml  README.md
crates/telemetry/src/: README.md  lib.rs
docs/adr/: 0001-workspace-architecture.md  0002-desktop-backend-module-boundaries.md  0003-desktop-ui-stack-exception.md  README.md
docs/api/: README.md  desktop-tauri-commands.md
docs/product/: README.md  implemented-architecture-and-workflows.md
docs/runbooks/: README.md  development-validation.md
scripts/data/: README.md  generate-sample-csv.ps1
scripts/dev/: README.md  invoke-rust-command.ps1  run-cached-query-perf.ps1  run-desktop-appium-validation.ps1  run-desktop-browser-validation.ps1  run-desktop-light-validation.ps1  validate-workspace.ps1
scripts/packaging/: README.md  build-desktop.ps1
tests/e2e/: README.md  desktop.app.spec.ts
tests/fixtures/: README.md
tests/integration/: Cargo.toml  README.md
tests/integration/src/: lib.rs
tests/integration/tests/: offline_flows.rs
(+13 files in other folders)
