[package]
name = "connectors"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
calamine = "0.26"
csv = "1.3"
polars.workspace = true
rusqlite.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
umya-spreadsheet = "2.2"
