[package]
name = "desktop"
version.workspace = true
description = "Offline Desktop BI Application"
authors.workspace = true
edition.workspace = true

[features]
default = ["desktop-runtime"]
desktop-runtime = [
    "dep:analytics-core",
    "dep:connectors",
    "dep:export-runtime",
    "dep:job-runner",
    "dep:metadata-store",
    "dep:rusqlite",
    "dep:tauri",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-opener",
    "dep:tokio",
]

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
analytics-core = { path = "../../../crates/analytics-core", optional = true }
connectors = { path = "../../../crates/connectors", optional = true }
export-runtime = { path = "../../../crates/export-runtime", optional = true }
job-runner = { path = "../../../crates/job-runner", optional = true }
metadata-store = { path = "../../../crates/metadata-store", optional = true }
telemetry = { path = "../../../crates/telemetry" }
# duckdb = { version = "0.10", features = ["bundled"] }
# polars = { version = "0.40", features = ["csv", "json", "parquet", "dtype-struct"] }
# 使用 rusqlite 替代 duckdb
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
thiserror = "1"
tauri-plugin-dialog = { version = "2", optional = true }
